# mri_degad

./: README.md  pipeline_description.json  pyproject.toml  setup.py
config/: snakebids.yml
docs/: conf.py  requirements.txt
docs/getting_started/: installation.rst
docs/usage/: app_cli.rst
workflow/: Snakefile
workflow/scripts/: cnn.py  resample.py
