[tool.poetry]
name = "mri-degad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mri_degad"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
snakebids = "^0.8.1"
pybids = "^0.16.1"
numpy = "^1.24.3"
nibabel = "^5.1.0"
nilearn = "^0.10.1"

[tool.poetry.group.dev.dependencies]
snakefmt = "^0.8.4"
ruff = "^0.0.265"
pyright = "^1.1.308"
black = "^23.3.0"

[tool.poetry.scripts]
mri_degad = 'mri_degad.run:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
